# cmake_example

./: .gitmodules  CMakeLists.txt
script/: .testito.py.swp  test.py  testito.py
src/: .prueba_bindings.cpp.swp  prueba.cpp  prueba_bindings.cpp
